--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,6 +174,7 @@ const workExperiences = [
                         width={logo?.width || 64}
                       src={lightLogoImage}
                       alt={`${name} logo (light mode)`}
+                      loading="eager"
                     />
                   )}
                   {darkLogoImage ? (
@@ -183,6 +184,7 @@ const workExperiences = [
                       width={logo?.width || 64}
                       src={darkLogoImage}
                       alt={`${name} logo (dark mode)`}
+                      loading="eager"
                     />
                   ) : (
                     lightLogoImage && (
@@ -193,6 +195,7 @@ const workExperiences = [
                         width="128"
                         src={lightLogoImage}
                         alt={`${name} logo (fallback)`}
+                        loading="eager"
                       />
                     )
                   )}
