--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -4,7 +4,7 @@ import avatar from "../assets/mike-pp.png";
 ---
 
 <div
-  class="flex md:w-40 sm:w-32 flex-col items-center justify-center rounded-xl overflow-hidden bg-gray-200 dark:bg-gray-700"
+  class="flex xxs:w-28 xs:w-32 md:w-40 flex-col items-center justify-center rounded-xl overflow-hidden bg-gray-200 dark:bg-gray-700"
 >
   <div
     id="scratch-container"
