--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -235,9 +235,9 @@ const workExperiences = [
               </div> */}
               <!-- Text Content -->
               <div class="text-left">
-                <div class="text-md font-medium text-gray-900 dark:text-gray-100 flex flex-wrap xs:flex-col sm:flex-row sm:gap-2">
+                <div class="text-md font-medium text-gray-900 dark:text-gray-100 flex flex-wrap flex-col">
                   <span class="text-md">{work.role} at {work.name}</span>
-                  <span class="text-md sm:self-center text-gray-500 dark:text-gray-400">{work.year}</span>
+                  <span class="text-md text-gray-500 dark:text-gray-400">{work.year}</span>
                 </div>
                 <p class="mt-0.5 text-md text-gray-600 dark:text-gray-300">
                   {work.description}
